syntax = "proto3";
package goshare.hub;

option go_package = "github.com/mineralres/goshare/pkg/pb/hub";

import "goshare/instrument.proto";

// 模拟环境的订单记录
message DemoOrder {
  string   ta_id                          = 1;
  string   bu_id                          = 2;
  int32    front_id                       = 3;
  int32    session_id                     = 4;
  string   order_ref                      = 5;
  string   exchange                       = 6;
  string   symbol                         = 7;
  string   product                        = 8;
  int32    direction                      = 9;
  int32    offset                         = 10;
  double   price                          = 11;
  int32    volume                         = 12;
  double   price_tick                     = 13;
  int32    multiple                       = 14;
  int32    trading_day                    = 15;
  int32    status                         = 16;
  string   demo_order_id                  = 17;
  double   upper_limit                    = 18;
  double   lower_limit                    = 19;
  int32    min_limit_order_volume         = 20;
  int32    min_market_order_volume        = 21;
  int32    volume_traded                  = 22;
  int32    volume_canceled                = 23;
  int32    send_trading_day               = 24;
  int32    product_type                   = 25;
  int32    order_source_type              = 26;
  int32    price_type                     = 27;
  int64    send_time                      = 28;
  repeated goshare.MarketStatus time_rule = 29;
}